--- a/fake-news-detector.ipynb
+++ b/fake-news-detector.ipynb
@@ -306,7 +306,7 @@
     "        results = sentiment_analyzer.polarity_scores(article)\n",
     "        print('Sentiment analysis results: ')\n",
     "        \n",
-    "        for k in sorted(ss) :\n",
+    "        for k in sorted(results) :\n",
     "            print('{0}: {1}, '.format(k, results[k]), end = '')\n",
     "        print()\n",
     "        \n",
