--- a/fake-news-detector.ipynb
+++ b/fake-news-detector.ipynb
@@ -375,8 +375,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[587,  42],\n",
-       "       [ 47, 591]])"
+       "array([[585,  44],\n",
+       "       [ 45, 593]])"
       ]
      },
      "execution_count": 10,
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "95d29b96",
    "metadata": {},
    "outputs": [
@@ -399,28 +399,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Results: FAKE\n",
-      "Accuracy of the results: 100.0%\n",
-      "Sentiment analysis results: \n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'ss' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/8k/2rzp_x8d70j7w5wzcmn8flrc0000gn/T/ipykernel_2767/4065905576.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;31m# Apply sentiment analysis\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0msentiment_analysis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_test_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/var/folders/8k/2rzp_x8d70j7w5wzcmn8flrc0000gn/T/ipykernel_2767/2444077558.py\u001b[0m in \u001b[0;36msentiment_analysis\u001b[0;34m(articles_list)\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Sentiment analysis results: '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mss\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'{0}: {1}, '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'ss' is not defined"
+      "Results are false negative: news is considered fake when it isn't\n",
+      "Accuracy of the results: 0.0%\n",
+      "Sentiment analysis results: \n",
+      "compound: 0.8302, neg: 0.021, neu: 0.889, pos: 0.091, \n",
+      "Article was rated as 2.1 % Negative\n",
+      "Article was rated as 88.9 % Neutral\n",
+      "Article was rated as 9.1 % Positive\n",
+      "Overall rating of the article: Positive\n"
      ]
     }
    ],
    "source": [
     "# Test a random article from CNN\n",
-    "expected_y = ['FAKE']\n",
-    "x_test_1 = ['SEYMOUR, IN—Calling into question the 9-year-old amateur geologist’s taste and expertise, sources confirmed Thursday that local child Jacob Hiller could afford to be more discerning about which rocks were worth collecting. “I asked him what kind of rock this one was and he said ‘shiny’—shiny isn’t a rock type, moron,” said one source, who noted that the majority of the rocks in the boy’s collection came either from his backyard or the drainage ditch along the side of the road, neither of which seemed like particularly impressive dig sites. “Oh, this one is bigger than that one? Is that your hypothesis? Does he not realize this one is literally a chunk of concrete? Even the few cool-looking rocks he does own are fakes; they’re tumbled and dyed. He might know rocks can’t naturally be that shiny and magenta if he’d bothered to read one goddamn article on geology in his entire life.” At press time, the child had reportedly added an invaluable dinosaur fossil to the collection in his shirt.']\n",
+    "expected_y = ['REAL']\n",
+    "x_test_1 = [\"US stocks exploded higher Wednesday. The Dow is now more than 20% above its 52-week low, which puts it in a new bull market. Federal Reserve chair Jerome Powell strongly suggested that the central bank is ready to slow its pace of interest rate hikes. Powell noted that the Fed is still concerned about inflation but that it also does not want to jeopardize the health of the labor market and broader economy either. Wednesday's rally helped push the markets to their second straight month of solid returns. The three major indexes wrapped up November with gains between 4% and 6%. The Dow soared more than 735 points, or 2.2% The S&P 500 rose 3.1%. The Nasdaq Composite shot up 4.4%. As stocks settle after the trading day, levels might still change slightly.\"]\n",
     "tfidf_test_1 = tfidf_vectorizer.transform(x_test_1)\n",
     "actual_y = pac.predict(tfidf_test_1)\n",
     "score_1 = accuracy_score(expected_y, actual_y)\n",
@@ -464,7 +457,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3d801ce",
+   "id": "73fcfa1e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b47ddf12",
    "metadata": {},
    "outputs": [],
    "source": []
