Added a couple more test articles

--- a/fake-news-detector.ipynb
+++ b/fake-news-detector.ipynb
@@ -351,7 +351,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of test: 92.98%\n"
+      "Accuracy of test: 92.82%\n"
      ]
     }
    ],
@@ -376,7 +376,7 @@
      "data": {
       "text/plain": [
        "array([[585,  44],\n",
-       "       [ 45, 593]])"
+       "       [ 47, 591]])"
       ]
      },
      "execution_count": 10,
@@ -391,29 +391,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "95d29b96",
+   "execution_count": 27,
+   "id": "9d1b0e82",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Results are false negative: news is considered fake when it isn't\n",
-      "Accuracy of the results: 0.0%\n",
+      "Results: REAL\n",
+      "Accuracy of the results: 100.0%\n",
       "Sentiment analysis results: \n",
-      "compound: 0.8302, neg: 0.021, neu: 0.889, pos: 0.091, \n",
-      "Article was rated as 2.1 % Negative\n",
-      "Article was rated as 88.9 % Neutral\n",
-      "Article was rated as 9.1 % Positive\n",
-      "Overall rating of the article: Positive\n"
+      "compound: -0.6524, neg: 0.075, neu: 0.866, pos: 0.059, \n",
+      "Article was rated as 7.5 % Negative\n",
+      "Article was rated as 86.6 % Neutral\n",
+      "Article was rated as 5.8999999999999995 % Positive\n",
+      "Overall rating of the article: Negative\n"
      ]
     }
    ],
    "source": [
-    "# Test a random article from CNN\n",
+    "# Test a random article from the Wall Street Journal\n",
     "expected_y = ['REAL']\n",
-    "x_test_1 = [\"US stocks exploded higher Wednesday. The Dow is now more than 20% above its 52-week low, which puts it in a new bull market. Federal Reserve chair Jerome Powell strongly suggested that the central bank is ready to slow its pace of interest rate hikes. Powell noted that the Fed is still concerned about inflation but that it also does not want to jeopardize the health of the labor market and broader economy either. Wednesday's rally helped push the markets to their second straight month of solid returns. The three major indexes wrapped up November with gains between 4% and 6%. The Dow soared more than 735 points, or 2.2% The S&P 500 rose 3.1%. The Nasdaq Composite shot up 4.4%. As stocks settle after the trading day, levels might still change slightly.\"]\n",
+    "x_test_1 = ['Fishing is never an easy way to make a living, but it’s even harder when the federal bureaucracy can put you out of business on a whim. Herring fishermen are fighting back, with potentially large implications for the administrative state. In 2020 the National Marine Fisheries Service (NMFS) decreed that Atlantic herring fishermen must include a human monitor to ensure compliance with catch limits. The fishermen must pay for the monitor, though many are small, independent operators. By the fisheries service’s own estimate, its mandate costs each boat $710 a day. Depending on the catch, this is often more than the captains make on a trip. Even the service acknowledges that the monitoring cost will reduce herring operations’ annual returns by 20%. Enter the Cause of Action Institute, which sued the Commerce Department (which oversees the NMFS) in 2020 on behalf of fishermen in New Jersey. The suit claims Congress never authorized the bureaucratic cost-shift to the industry. The 1976 Magnuson-Stevens Act governs fishing in federal waters and allows the fisheries service to impose monitors. But nowhere in the law does Congress give the service power to force herring fishermen to fund the program. Congress has authorized industry-funded monitoring in other, specific contexts—including for certain North Pacific fisheries, and for foreign vessels. It did not do the same here. The fisheries service argues it has the legal right to impose the costs because the law is silent on the matter. The government points to language authorizing it to take steps that are “necessary and appropriate” to manage fisheries. Put another way, unless Congress explicitly prohibits an action, an agency can proceed. The case has moved up the appellate chain, and in August a divided panel of the D.C. Circuit Court of Appeals ruled for the government. Judges Sri Srinivasan and Judith Rogers cited the Supreme Court’s Chevron deference standard, finding that the law “through its silence, leaves room for agency discretion.” But Judge Justin Walker noted in dissent that this is a principle with no limit. He mused whether the fisheries service could find it “necessary” for fishermen to drive their federal monitors back and forth to the office to save on government gas bills, or whether it could demand fishermen finance other bureaucratic costs. The decision removes one of the few practical constraints on regulatory excess: a lack of resources. If government can write rules and require their targets to pay the costs without explicit Congressional approval, there will be no limit on bureaucratic discretion. The herring fishermen are asking the Supreme Court to hear the case and are represented by former Solicitor General Paul Clement. In West Virginia v. EPA this year, the Court used its major questions doctrine to rein in egregious regulatory overreach. But it has left Chevron as a largely unchecked license for regulators who can still do great harm without Congressional assent. Silence shouldn’t be a bureaucratic license to wreck livelihoods.']\n",
     "tfidf_test_1 = tfidf_vectorizer.transform(x_test_1)\n",
     "actual_y = pac.predict(tfidf_test_1)\n",
     "score_1 = accuracy_score(expected_y, actual_y)\n",
@@ -435,32 +435,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "75c32068",
+   "execution_count": 28,
+   "id": "5d4e084e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0],\n",
+       "       [0, 0]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Confusion matrix of the random article \n",
+    "# Confusion matrix of the random article from the Wall Street Journal\n",
     "confusion_matrix(expected_y, actual_y, labels = ['REAL', 'FAKE'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a3e42ebd",
+   "execution_count": 29,
+   "id": "95d29b96",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results are false negative: news is considered fake when it isn't\n",
+      "Accuracy of the results: 0.0%\n",
+      "Sentiment analysis results: \n",
+      "compound: 0.8302, neg: 0.021, neu: 0.889, pos: 0.091, \n",
+      "Article was rated as 2.1 % Negative\n",
+      "Article was rated as 88.9 % Neutral\n",
+      "Article was rated as 9.1 % Positive\n",
+      "Overall rating of the article: Positive\n"
+     ]
+    }
+   ],
    "source": [
-    "type(actual_y)"
+    "# Test a random article from CNN\n",
+    "expected_y_2 = ['REAL']\n",
+    "x_test_2 = [\"US stocks exploded higher Wednesday. The Dow is now more than 20% above its 52-week low, which puts it in a new bull market. Federal Reserve chair Jerome Powell strongly suggested that the central bank is ready to slow its pace of interest rate hikes. Powell noted that the Fed is still concerned about inflation but that it also does not want to jeopardize the health of the labor market and broader economy either. Wednesday's rally helped push the markets to their second straight month of solid returns. The three major indexes wrapped up November with gains between 4% and 6%. The Dow soared more than 735 points, or 2.2% The S&P 500 rose 3.1%. The Nasdaq Composite shot up 4.4%. As stocks settle after the trading day, levels might still change slightly.\"]\n",
+    "tfidf_test_2 = tfidf_vectorizer.transform(x_test_2)\n",
+    "actual_y_2 = pac.predict(tfidf_test_2)\n",
+    "score_2 = accuracy_score(expected_y_2, actual_y_2)\n",
+    "\n",
+    "if expected_y_2 == actual_y_2 :\n",
+    "    print(\"Results:\", actual_y[0])\n",
+    "\n",
+    "elif expected_y_2 == ['FAKE'] and actual_y_2 == ['REAL'] :\n",
+    "    print(\"Results are false positive: news is considered real when it isn't\")\n",
+    "\n",
+    "elif expected_y_2 == ['REAL'] and actual_y_2 == ['FAKE'] :\n",
+    "    print(\"Results are false negative: news is considered fake when it isn't\")\n",
+    "\n",
+    "print(f'Accuracy of the results: {round(score_2 * 100, 2)}%')\n",
+    "\n",
+    "# Apply sentiment analysis\n",
+    "sentiment_analysis(x_test_2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
+   "id": "75c32068",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1],\n",
+       "       [0, 0]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We have a false negative. Confusion matrix of the random article \n",
+    "confusion_matrix(expected_y_2, actual_y_2, labels = ['REAL', 'FAKE'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a3e42ebd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results are false negative: news is considered fake when it isn't\n",
+      "Accuracy of the results: 0.0%\n",
+      "Sentiment analysis results: \n",
+      "compound: 0.8302, neg: 0.021, neu: 0.889, pos: 0.091, \n",
+      "Article was rated as 2.1 % Negative\n",
+      "Article was rated as 88.9 % Neutral\n",
+      "Article was rated as 9.1 % Positive\n",
+      "Overall rating of the article: Positive\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test a random fake news article from the onion\n",
+    "expected_y_3 = ['REAL']\n",
+    "x_test_3 = [\"US stocks exploded higher Wednesday. The Dow is now more than 20% above its 52-week low, which puts it in a new bull market. Federal Reserve chair Jerome Powell strongly suggested that the central bank is ready to slow its pace of interest rate hikes. Powell noted that the Fed is still concerned about inflation but that it also does not want to jeopardize the health of the labor market and broader economy either. Wednesday's rally helped push the markets to their second straight month of solid returns. The three major indexes wrapped up November with gains between 4% and 6%. The Dow soared more than 735 points, or 2.2% The S&P 500 rose 3.1%. The Nasdaq Composite shot up 4.4%. As stocks settle after the trading day, levels might still change slightly.\"]\n",
+    "tfidf_test_3 = tfidf_vectorizer.transform(x_test_3)\n",
+    "actual_y_3 = pac.predict(tfidf_test_3)\n",
+    "score_3 = accuracy_score(expected_y_3, actual_y_3)\n",
+    "\n",
+    "if expected_y_3 == actual_y_3 :\n",
+    "    print(\"Results:\", fake_actual_y[0])\n",
+    "\n",
+    "elif expected_y_3 == ['FAKE'] and actual_y_3 == ['REAL'] :\n",
+    "    print(\"Results are false positive: news is considered real when it isn't\")\n",
+    "\n",
+    "elif expected_y_3 == ['REAL'] and actual_y_3 == ['FAKE'] :\n",
+    "    print(\"Results are false negative: news is considered fake when it isn't\")\n",
+    "\n",
+    "print(f'Accuracy of the results: {round(score_3 * 100, 2)}%')\n",
+    "\n",
+    "# Apply sentiment analysis\n",
+    "sentiment_analysis(x_test_3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "73fcfa1e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1],\n",
+       "       [0, 0]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Confusion matrix of the fake news article\n",
+    "confusion_matrix(expected_y_3, actual_y_3, labels = ['REAL', 'FAKE'])"
+   ]
   },
   {
    "cell_type": "code",
