Fixed minor bugs from confusion matrix

--- a/fake-news-detector.ipynb
+++ b/fake-news-detector.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "id": "8dee6269",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of test: 92.82%\n"
+      "Accuracy of test: 92.58%\n"
      ]
     }
    ],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "id": "54104590",
    "metadata": {},
    "outputs": [
@@ -376,10 +376,10 @@
      "data": {
       "text/plain": [
        "array([[585,  44],\n",
-       "       [ 47, 591]])"
+       "       [ 50, 588]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,8 +391,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "9d1b0e82",
+   "execution_count": 42,
+   "id": "2ddafff0",
    "metadata": {},
    "outputs": [
     {
@@ -435,8 +435,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "5d4e084e",
+   "execution_count": 43,
+   "id": "2c97ec38",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
        "       [0, 0]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "id": "95d29b96",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
     "score_2 = accuracy_score(expected_y_2, actual_y_2)\n",
     "\n",
     "if expected_y_2 == actual_y_2 :\n",
-    "    print(\"Results:\", actual_y[0])\n",
+    "    print(\"Results:\", actual_y_2[0])\n",
     "\n",
     "elif expected_y_2 == ['FAKE'] and actual_y_2 == ['REAL'] :\n",
     "    print(\"Results are false positive: news is considered real when it isn't\")\n",
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "id": "75c32068",
    "metadata": {},
    "outputs": [
@@ -513,7 +513,7 @@
        "       [0, 0]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "id": "a3e42ebd",
    "metadata": {},
    "outputs": [
@@ -533,27 +533,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Results are false negative: news is considered fake when it isn't\n",
-      "Accuracy of the results: 0.0%\n",
+      "Results: FAKE\n",
+      "Accuracy of the results: 100.0%\n",
       "Sentiment analysis results: \n",
-      "compound: 0.8302, neg: 0.021, neu: 0.889, pos: 0.091, \n",
-      "Article was rated as 2.1 % Negative\n",
-      "Article was rated as 88.9 % Neutral\n",
-      "Article was rated as 9.1 % Positive\n",
-      "Overall rating of the article: Positive\n"
+      "compound: -0.1036, neg: 0.107, neu: 0.775, pos: 0.118, \n",
+      "Article was rated as 10.7 % Negative\n",
+      "Article was rated as 77.5 % Neutral\n",
+      "Article was rated as 11.799999999999999 % Positive\n",
+      "Overall rating of the article: Negative\n"
      ]
     }
    ],
    "source": [
     "# Test a random fake news article from the onion\n",
-    "expected_y_3 = ['REAL']\n",
-    "x_test_3 = [\"US stocks exploded higher Wednesday. The Dow is now more than 20% above its 52-week low, which puts it in a new bull market. Federal Reserve chair Jerome Powell strongly suggested that the central bank is ready to slow its pace of interest rate hikes. Powell noted that the Fed is still concerned about inflation but that it also does not want to jeopardize the health of the labor market and broader economy either. Wednesday's rally helped push the markets to their second straight month of solid returns. The three major indexes wrapped up November with gains between 4% and 6%. The Dow soared more than 735 points, or 2.2% The S&P 500 rose 3.1%. The Nasdaq Composite shot up 4.4%. As stocks settle after the trading day, levels might still change slightly.\"]\n",
+    "expected_y_3 = ['FAKE']\n",
+    "x_test_3 = ['NEW YORK—Emphasizing that the researchers were by no means happy about these results, an unfortunate study published by Columbia University this week found that abusing restaurant waitstaff is the secret to living a longer, happier life. “After tracking thousands of individuals over a period of two decades, we can say with regrettable certainty that treating food service workers like subhuman garbage is the single most important factor in enhancing the length and quality of a human lifespan,” said the study’s lead author Dr. Elizabeth Mitran, who reluctantly explained that just 30 seconds of screaming at a waiter for slow entrées carries greater benefits than an hour of vigorous exercise.“We can’t in good conscience endorse this behavior, but every waiter you make cry adds another year to your life.”']\n",
     "tfidf_test_3 = tfidf_vectorizer.transform(x_test_3)\n",
     "actual_y_3 = pac.predict(tfidf_test_3)\n",
     "score_3 = accuracy_score(expected_y_3, actual_y_3)\n",
     "\n",
     "if expected_y_3 == actual_y_3 :\n",
-    "    print(\"Results:\", fake_actual_y[0])\n",
+    "    print(\"Results:\", actual_y_3[0])\n",
     "\n",
     "elif expected_y_3 == ['FAKE'] and actual_y_3 == ['REAL'] :\n",
     "    print(\"Results are false positive: news is considered real when it isn't\")\n",
@@ -569,18 +569,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "id": "73fcfa1e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0, 1],\n",
-       "       [0, 0]])"
+       "array([[0, 0],\n",
+       "       [0, 1]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
